# diplom

mmrag-techpdf/: pyproject.toml
mmrag-techpdf/scripts/: build_demo_dataset.py
mmrag-techpdf/src/mmrag/adapters/embeddings/: sentence_transformer_embedder.py
mmrag-techpdf/src/mmrag/adapters/figures/: basic_figure_extractor.py  blip2_captioner.py
mmrag-techpdf/src/mmrag/adapters/layout/: heuristic_layout.py
mmrag-techpdf/src/mmrag/adapters/llm/: local_generator.py  openai_generator.py
mmrag-techpdf/src/mmrag/adapters/pdf/: pymupdf_loader.py
mmrag-techpdf/src/mmrag/adapters/rerank/: cross_encoder_reranker.py
mmrag-techpdf/src/mmrag/adapters/retrieval/: bm25_retriever.py  hybrid_retriever.py
mmrag-techpdf/src/mmrag/adapters/storage/: faiss_store.py  local_docstore.py
mmrag-techpdf/src/mmrag/adapters/tables/: camelot_extractor.py
mmrag-techpdf/src/mmrag/api/: app.py
mmrag-techpdf/src/mmrag/application/: evaluation_pipeline.py  indexing_pipeline.py  query_pipeline.py
mmrag-techpdf/src/mmrag/cli/: main.py
mmrag-techpdf/src/mmrag/config/: logging.py  settings.py
mmrag-techpdf/src/mmrag/domain/: artifact.py  document.py  query.py
mmrag-techpdf/src/mmrag/ports/: captioner.py  chart_parser.py  embedder.py  evaluator.py  figure_extractor.py  generator.py  index_store.py  layout_analyzer.py  pdf_loader.py  reranker.py  retriever.py  table_extractor.py
mmrag-techpdf/tests/: conftest.py  test_bm25_retriever.py  test_cross_encoder_reranker.py  test_domain.py  test_faiss_store.py  test_heuristic_layout.py  test_hybrid_retriever.py  test_indexing_pipeline.py  test_local_docstore.py  test_query_pipeline.py
